# Personal_ai_os

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  ui.py
src/: config.py  graph.py  llm.py  state.py  tools.py
src/memory/: embeddings.py  vectorstore.py
src/nodes/: calendar_action.py  check_memory.py  conversation.py  delete_calendar.py  execute_steps.py  plan_steps.py  plan_tasks.py  recall_memory.py  reminder_action.py  router.py  save_memory.py  send_email.py  send_message_node.py  update_calendar.py  update_memory.py
src/tool/: contacts.py  email_tool.py  google_calendar.py  telegram_client.py
